objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Business_Area_OLD__c</fullName>
        <description>Business area for this lead inquiry</description>
        <inlineHelpText>Business area for this lead inquiry</inlineHelpText>
        <label>Business Area OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Speciality Tapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Filters and Scientific Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Porous Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Security AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Packaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Protection Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Area_Text__c</fullName>
        <formula>Business_Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Area</label>
        <referenceTo>Business_Area__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Finance / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason__c</fullName>
        <label>Unqualified/Archive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Target Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_your_customer_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Know your customer verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Description__c</fullName>
        <label>Lead Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Change_Reason__c</fullName>
        <inlineHelpText>Please enter the reason during changing the lead owner.</inlineHelpText>
        <label>Lead Owner Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDM_External_Id__c</fullName>
        <description>MDM_External_ID__c</description>
        <externalId>true</externalId>
        <label>MDM_External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Category_2__c</fullName>
        <description>Copy of market category - used for lead mapping to opportunity</description>
        <label>Market Category - 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Reason__c</fullName>
        <label>Owner Change Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>Form RP01 - Revenue by Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230010 - Carbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230020 - Flavour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230030 - Mono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230040 - Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230050 - Scientific Services - Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230060 - Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230070 - ECIG Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230080 - ECIG Cigarette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230099 - Filters - Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230110 - Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230120 - Porous Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230130 - Non-Woven Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230140 - Foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230199 - Porous Technologies - Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230210 - Tapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230220 - Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Content Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230230 - Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230240 - Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230250 - Foils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230260 - Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230299 - P&amp;SS - Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230310 - Extrusions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230320 - Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230399 - Extrusion - Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230402 - Abrasives &amp; Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230404 - Access Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230406 - Adhesives, Sealants &amp; Tape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230408 - Bearings &amp; Power Transmission</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referred_by_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the account which referred this lead</description>
        <inlineHelpText>Select the account which referred this lead</inlineHelpText>
        <label>Referred by Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Country_Text__c</fullName>
        <formula>Report_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Country(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country where this Lead is based for reporting purposes</description>
        <label>Report Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>Business_Area__r.SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Business_Unit__c</fullName>
        <label>Strategic Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Specialist Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Personal Care Packaging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Agricultural Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambient Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assemblies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto &amp; Specialist Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bagged &amp; Boxed Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binding, Stretching &amp; Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buses &amp; Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cattle Breeding Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralised Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilled Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floors &amp; Stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics &amp; Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenhouses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <description>Copy of sub category. Used for mapping to opportunity</description>
        <label>Sub Category - 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disable_validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disable validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>i__CreatedForUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user on whose behalf the Contact was created</description>
        <label>Created for</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028MSBEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() - i__LastMailSent__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Lead</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundSent__c</fullName>
        <description>Time of the most recent email sent by this Lead</description>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>obsolete - use LastInboundSent__c</description>
        <formula>i__LastInboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailSent__c</fullName>
        <description>Time of the most recent email sent or received by this Lead</description>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundSent__c - i__LastInboundSent__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>obsolete - use LastMailSent__c</description>
        <formula>i__LastMailSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Lead</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Lead</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundSent__c</fullName>
        <description>Time of the most recent email sent to this Lead</description>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>obsolete - use LastOutboundSent__c</description>
        <formula>i__LastOutboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__OtherEmails__c</fullName>
        <description>Enter additional email addresses here, one per line</description>
        <label>Other Email Addresses</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Business_Area_OLD__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Business_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>3 - Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Authentication_Webinar_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/13/2015 12:00 AM</value>
        </filters>
        <label>Authentication Webinar - Leads</label>
        <sharedTo>
            <group>All_User_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_know_your_customer</fullName>
        <active>true</active>
        <description>Make mandatory if Filters and trying to qualify</description>
        <errorConditionFormula>AND(Know_your_customer_completed__c = FALSE,  Business_Area__r.MDM_External_Id__c = &apos;FIL&apos;,  ISPICKVAL(Status,&apos;3 - Qualified&apos;) )</errorConditionFormula>
        <errorDisplayField>Know_your_customer_completed__c</errorDisplayField>
        <errorMessage>Know your customer must be completed before converting or qualifying the lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_or_Email</fullName>
        <active>false</active>
        <description>Make sure that phone OR email are entered</description>
        <errorConditionFormula>AND(ISBLANK( Email ),ISBLANK( Phone ))</errorConditionFormula>
        <errorMessage>Enter either an email address OR a phone number</errorMessage>
    </validationRules>
</CustomObject>